force-app/main/default/objects/FAQ__kav/fields/AI_Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence_Score__c</fullName>
    <label>AI Confidence Score</label>
    <defaultValue>0.5</defaultValue>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>