force-app/main/default/objects/FAQ__kav/fields/Article_Type__c.field-meta.xml
<CustomField>
    <fullName>Article_Type__c</fullName>
    <label>Article Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Menu</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
                <default>true</default>
                <label>Policy</label>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>