force-app/main/default/objects/FAQ__kav/fields/PII_Sensitivity__c.field-meta.xml
<CustomField>
    <fullName>PII_Sensitivity__c</fullName>
    <label>PII Sensitivity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
                <default>true</default>
                <label>Public</label>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>