force-app/main/default/objects/FAQ__kav/fields/Policy_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Effective_Date__c</fullName>
    <label>Policy Effective Date</label>
    <type>Date</type>
</CustomField>